SideNav Unvisibility issue resolved

--- a/css/index.css
+++ b/css/index.css
@@ -303,8 +303,8 @@ input[type="text"], input[type="email"], input[type="search"], input[type="passw
 
 .menu nav {
 
-    position: absolute;
     top: 183px;
+    margin-top: 17px;
     left: 0px;
     right: 0px;
     bottom: 50px;
@@ -356,9 +356,8 @@ input[type="text"], input[type="email"], input[type="search"], input[type="passw
 
 .social {
 
-    padding: 30px;
-    position: absolute;
-    top: 619px;
+    text-align: center;
+    margin-top: 18px;
 }
 
 .social a {
@@ -390,12 +389,12 @@ input[type="text"], input[type="email"], input[type="search"], input[type="passw
 
 .copyright {
 
-    position: absolute;
     bottom: 5px;
+    text-align: center;
+    margin-top: 30px;
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
     font-size: 11px;
-    padding: 30px;
     color: #747474;
     line-height: 18px;
     letter-spacing: 1px
